// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteButton renders correctly When adding/removing to favorite im progress 1`] = `
<button
  className="btn btn--list movie-card__button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <AddIcon />
  <span>
    My list
  </span>
</button>
`;

exports[`FavoriteButton renders correctly When film is favorite 1`] = `
<button
  className="btn btn--list movie-card__button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <InListIcon />
  <span>
    My list
  </span>
</button>
`;

exports[`FavoriteButton renders correctly When film is not favorite 1`] = `
<button
  className="btn btn--list movie-card__button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <AddIcon />
  <span>
    My list
  </span>
</button>
`;
